tests/ok/for-range-operator.ari
fn main() -> i64 {
  var total = 0;
  for value in 0..5 {
    total = total + value;
  }
  return total;
}
