tests/errors/for-vector-mixed-types.ari
fn main() -> i64 {
  var total = 0;
  for value in [1, true] {
    total = total + value;
  }
  return total;
}
